crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__call_function_field.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/call_function_field.lox
---
success: true
exit_code: 0
----- stdout -----
bar
1
2

----- stderr -----
