crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__get_and_set_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_and_set_method.lox
---
success: true
exit_code: 0
----- stdout -----
other
1
method
2

----- stderr -----
