crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__get_on_bool.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_bool.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `true` is of type `Bool`
   ╭─[craftinginterpreters/test/field/get_on_bool.lox:1:1]
   │
 1 │ true.foo; // expect runtime error: Only instances have properties.
   │ ────  
───╯
