crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__get_on_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_class.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `<class Foo at [POINTER]>` is of type `Class`
   ╭─[craftinginterpreters/test/field/get_on_class.lox:2:1]
   │
 2 │ Foo.bar; // expect runtime error: Only instances have properties.
   │ ───  
───╯
