crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__get_on_function.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_function.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `<function foo at [POINTER]>` is of type `Function`
   ╭─[craftinginterpreters/test/field/get_on_function.lox:3:1]
   │
 3 │ foo.bar; // expect runtime error: Only instances have properties.
   │ ───  
───╯
