crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__get_on_nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/get_on_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only instances have properties, but `nil` is of type `Nil`
   ╭─[craftinginterpreters/test/field/get_on_nil.lox:1:1]
   │
 1 │ nil.foo; // expect runtime error: Only instances have properties.
   │ ───  
───╯
