crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method.lox
---
success: true
exit_code: 0
----- stdout -----
got method
arg

----- stderr -----
