crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__field__method_binds_this.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/field/method_binds_this.lox
---
success: true
exit_code: 0
----- stdout -----
foo1
1

----- stderr -----
